# railway-celery-study

./: Dockerfile  Procfile  docker-compose.yml  pyproject.toml  run_worker.py
app/: celery_beat.py  celery_worker.py  main.py  run_worker.py  tasks.py
